Bug 277875. Rewrite nsIFrame::GetWindow and make it not assert --- it's OK to not have a widget when we're printing. r+sr=bzbarsky